--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -1,128 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:layout_height="wrap_content">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/profile_account_profile_image"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_10ssp"
-        android:layout_marginStart="@dimen/_30sdp"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/_18sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/title"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/profile_img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/businessProfileAccountItemChildImage"
-            android:scaleType="fitXY"
-            android:src="@color/light_gray"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/b_imageTextTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_20sdp"
-            android:visibility="gone" />
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
-        android:text=""
-        android:fontFamily="@font/opensans_semibold"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_11ssp"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:layout_marginEnd="@dimen/_35sdp"
-        app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
-        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/statusLL"
-        android:layout_width="wrap_content"
+        android:id="@+id/ll_child_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="@dimen/_35sdp"
-        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="@dimen/_1sdp"
-        android:background="@drawable/txn_pending_bg"
-        android:visibility="visible">
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/profile_account_profile_image"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_30sdp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_18sdp">
+
+            <ImageView
+                android:id="@+id/profile_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/businessProfileAccountItemChildImage"
+                android:scaleType="fitXY"
+                android:src="@color/light_gray"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/b_imageTextTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/opensans_bold"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_20sdp"
+                android:visibility="gone" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/statusTV"
-            android:layout_width="@dimen/_68sdp"
-            android:layout_height="@dimen/_14sdp"
-            android:fontFamily="@font/opensans_bold"
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_35sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:padding="@dimen/_10sdp"
             android:text=""
-            android:gravity="center"
-            android:textColor="#FFA701"
-            android:textSize="@dimen/_7ssp" />
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
 
+        <LinearLayout
+            android:id="@+id/statusLL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="@dimen/_35sdp"
+            android:layout_marginBottom="@dimen/_1sdp"
+            android:background="@drawable/txn_pending_bg"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/statusTV"
+                android:layout_width="@dimen/_68sdp"
+                android:layout_height="@dimen/_14sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
+                android:text=""
+                android:textColor="#FFA701"
+                android:textSize="@dimen/_7ssp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/tickIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:src="@drawable/ic_custom_tick"
+            android:visibility="gone" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/tickIcon"
-        app:layout_constraintStart_toEndOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_custom_tick"
-        app:tint="@color/primary_green" />
-
-<!--    <View-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="1dp"-->
-<!--        app:layout_constraintStart_toEndOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="@+id/ll_add_dba"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:layout_marginStart="@dimen/_30ssp"-->
-<!--        android:layout_marginEnd="@dimen/_30ssp"-->
-<!--        android:background="@color/light_gray"-->
-<!--        >-->
-<!--    </View>-->
 
     <LinearLayout
         android:id="@+id/ll_add_dba"
         android:layout_width="match_parent"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="@dimen/_5sdp"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_55sdp"
+        android:layout_marginStart="@dimen/_5sdp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:visibility="visible">
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -147,7 +117,5 @@
                 android:textSize="@dimen/_11sdp" />
         </LinearLayout>
 
-
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
