--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -417,7 +417,8 @@
                         <ProgressBar
                             android:id="@+id/progressBarLoadMore"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            />
                     </LinearLayout>
                 </androidx.core.widget.NestedScrollView>
             </androidx.cardview.widget.CardView>
