--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -102,7 +102,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="@dimen/_6sdp"
-                                android:fontFamily="@font/opensans_semibold"
+                                android:fontFamily="@font/opensans_bold"
                                 android:text="Active"
                                 android:textColor="@color/active_green"
                                 android:textSize="@dimen/_11ssp" />
