--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -6,51 +6,83 @@
     android:layout_height="wrap_content"
     android:layout_below="@+id/profileLL"
     android:background="@color/white"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:visibility="visible">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_10ssp"
+        android:background="#F6F9FE"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/_11sdp"
-        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_15ssp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/profile_img"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/profile_account_profile_image"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
-            android:src="@drawable/ic_add_circle" />
+            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/_18sdp">
+
+            <ImageView
+                android:id="@+id/profile_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/businessProfileAccountItemChildImage"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_add_circle"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/b_imageTextTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/opensans_bold"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_20sdp"
+                android:visibility="visible" />
+
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
-            android:layout_weight="0.3"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_60sdp"
+            android:layout_weight="0.3"
             android:fontFamily="@font/opensans_semibold"
             android:padding="@dimen/_10sdp"
             android:text=""
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp"
-            app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
-            app:layout_constraintEnd_toEndOf="@+id/arrowImg"
-            app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
-            app:layout_constraintTop_toTopOf="@id/profile_account_profile_image" />
+            android:textSize="@dimen/_11ssp" />
+
+        <ImageView
+            android:id="@+id/tickIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tint="@color/primary_green"
+            android:visibility="gone"
+            android:layout_marginEnd="@dimen/_16sdp"
+            android:contentDescription="@string/businessProfileAccountExpandDownArrow"
+            android:src="@drawable/ic_custom_tick" />
 
         <ImageView
             android:id="@+id/arrowImg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/_10ssp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:contentDescription="@string/businessProfileAccountExpandDownArrow"
-            android:src="@drawable/ic_down"
-            app:layout_constraintBottom_toBottomOf="@id/title"
-            app:layout_constraintEnd_toEndOf="@id/title"
-            app:layout_constraintStart_toEndOf="@id/title"
-            app:layout_constraintTop_toTopOf="@id/title" />
+            android:src="@drawable/ic_down" />
 
     </LinearLayout>
 
