--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -4,21 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:padding="@dimen/_5sdp"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_child_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/_5sdp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/profile_account_profile_image"
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
-            android:layout_alignParentRight="true"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_20sdp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_18sdp">
 
@@ -44,52 +45,53 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginEnd="@dimen/_35sdp"
+            android:layout_weight="1"
             android:fontFamily="@font/opensans_semibold"
             android:padding="@dimen/_10sdp"
-            android:text=""
+            android:text="Title "
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
 
-        <LinearLayout
-            android:id="@+id/statusLL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginRight="@dimen/_35sdp"
-            android:layout_marginBottom="@dimen/_1sdp"
+        <TextView
+            android:id="@+id/statusTV"
+            android:layout_width="@dimen/_68sdp"
+            android:layout_height="@dimen/_14sdp"
+            android:layout_gravity="center_vertical"
             android:background="@drawable/txn_pending_bg"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/statusTV"
-                android:layout_width="@dimen/_68sdp"
-                android:layout_height="@dimen/_14sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:text=""
-                android:textColor="#FFA701"
-                android:textSize="@dimen/_7ssp" />
-
-        </LinearLayout>
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text=""
+            android:textColor="#FFA701"
+            android:textSize="@dimen/_7ssp" />
 
         <ImageView
             android:id="@+id/tickIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
+            app:tint="@color/primary_green"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:src="@drawable/ic_custom_tick"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:background="#E8E8E8"/>
 
     <LinearLayout
         android:id="@+id/ll_add_dba"
         android:layout_width="match_parent"
+        android:padding="@dimen/_5sdp"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/_5sdp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:visibility="visible">
@@ -98,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/_11sdp"
-            android:layout_marginStart="@dimen/_30ssp"
+            android:layout_marginStart="@dimen/_20sdp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -118,4 +120,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
 </LinearLayout>
