--- a/app/src/main/res/layout/activity_verification_failed.xml
+++ b/app/src/main/res/layout/activity_verification_failed.xml
@@ -2,11 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_13sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:padding="@dimen/_10sdp"
+        android:src="@drawable/ic_x" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:scrollbars="none">
 
         <LinearLayout
@@ -14,13 +25,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_21sdp"
             android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:padding="@dimen/_10sdp"
-                android:src="@drawable/ic_x" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -72,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:text="@string/dba_dba"
+                android:text="@string/verification_dba_name"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
