--- a/app/src/main/res/layout/activity_business_application_approved.xml
+++ b/app/src/main/res/layout/activity_business_application_approved.xml
@@ -16,7 +16,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_120sdp"
+                android:layout_marginBottom="@dimen/_50sdp"
                 android:orientation="vertical"
                 android:paddingStart="@dimen/_20sdp"
                 android:paddingTop="@dimen/_20sdp"
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/_45sdp"
+                    android:layout_marginBottom="@dimen/_39sdp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -69,12 +69,14 @@
                         android:id="@+id/i_iconIV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/_1sdp"
                         android:src="@drawable/ic_info" />
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_2sdp"
                     android:layout_marginBottom="@dimen/_7sdp"
                     app:cardCornerRadius="@dimen/_7sdp">
 
@@ -100,15 +102,15 @@
                                 android:textColor="@color/light_gray_black"
                                 android:textSize="@dimen/_11ssp" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_2sdp"
-                                android:layout_marginEnd="@dimen/_2sdp"
-                                android:fontFamily="@font/opensans_bold"
-                                android:text="$"
-                                android:textColor="@color/primary_color"
-                                android:textSize="@dimen/_12ssp" />
+                            <!--                            <TextView-->
+                            <!--                                android:layout_width="wrap_content"-->
+                            <!--                                android:layout_height="wrap_content"-->
+                            <!--                                android:layout_marginStart="@dimen/_2sdp"-->
+                            <!--                                android:layout_marginEnd="@dimen/_2sdp"-->
+                            <!--                                android:fontFamily="@font/opensans_bold"-->
+                            <!--                                android:text="$"-->
+                            <!--                                android:textColor="@color/primary_color"-->
+                            <!--                                android:textSize="@dimen/_12ssp" />-->
 
                             <TextView
                                 android:id="@+id/tvMonthlyVolume"
@@ -139,15 +141,15 @@
                                 android:textColor="@color/light_gray_black"
                                 android:textSize="@dimen/_11ssp" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_2sdp"
-                                android:layout_marginEnd="@dimen/_2sdp"
-                                android:fontFamily="@font/opensans_bold"
-                                android:text="$"
-                                android:textColor="@color/primary_color"
-                                android:textSize="@dimen/_12ssp" />
+                            <!--                            <TextView-->
+                            <!--                                android:layout_width="wrap_content"-->
+                            <!--                                android:layout_height="wrap_content"-->
+                            <!--                                android:layout_marginStart="@dimen/_2sdp"-->
+                            <!--                                android:layout_marginEnd="@dimen/_2sdp"-->
+                            <!--                                android:fontFamily="@font/opensans_bold"-->
+                            <!--                                android:text="$"-->
+                            <!--                                android:textColor="@color/primary_color"-->
+                            <!--                                android:textSize="@dimen/_12ssp" />-->
 
 
                             <TextView
@@ -165,8 +167,10 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_2sdp"
                     android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginBottom="@dimen/_50sdp"
+                    android:layout_marginRight="@dimen/_2sdp"
+                    android:layout_marginBottom="@dimen/_80sdp"
                     app:cardCornerRadius="@dimen/_7sdp">
 
                     <LinearLayout
@@ -228,10 +232,7 @@
                                 android:fontFamily="@font/opensans_bold"
                                 android:text=""
                                 android:textColor="@color/primary_color"
-                                android:textSize="@dimen/_12ssp"
-
-                                />
-
+                                android:textSize="@dimen/_12ssp" />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -239,48 +240,48 @@
             </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardAccept"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
-                android:gravity="center"
-                app:cardBackgroundColor="@color/primary_color"
-                app:cardCornerRadius="@dimen/_33sdp">
+                android:layout_alignParentBottom="true"
+                android:orientation="vertical">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardAccept"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:gravity="center"
+                    app:cardBackgroundColor="@color/primary_color"
+                    app:cardCornerRadius="@dimen/_33sdp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_13sdp"
+                        android:layout_marginBottom="@dimen/_13sdp"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:text="Accept"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12ssp" />
+                </androidx.cardview.widget.CardView>
 
                 <TextView
+                    android:id="@+id/cardDeclined"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_13sdp"
-                    android:layout_marginBottom="@dimen/_13sdp"
+                    android:layout_marginTop="@dimen/_9sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
-                    android:text="Accept"
-                    android:textColor="@color/white"
+                    android:text="Decline"
+                    android:textColor="@color/primary_color"
                     android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/cardDeclined"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:text="Decline"
-                android:textColor="@color/primary_color"
-                android:textSize="@dimen/_12ssp" />
-        </LinearLayout>
+            </LinearLayout>
         </RelativeLayout>
 
     </ScrollView>
