--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -90,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
                     android:text=""
+                    android:singleLine="true"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
 
