--- a/app/src/main/res/layout/seekbar_with_floating_text.xml
+++ b/app/src/main/res/layout/seekbar_with_floating_text.xml
@@ -18,9 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_floating_text"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="35dp"
-        android:progressBackgroundTint="@color/vlight_gray"
-        android:layout_marginEnd="35dp"
+        android:layout_marginStart="@dimen/_35sdp"
+        android:progressBackgroundTint="@color/light_gray"
+        android:layout_marginEnd="@dimen/_35sdp"
         android:max="24"
         android:textSize="12sp" />
 
