--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -457,10 +457,11 @@
                     <TextView
                         android:id="@+id/spannableTV"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_40sdp"
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/spannable_text"
                         android:textColor="@color/primary_black"
+                        android:layout_marginBottom="@dimen/_10sdp"
                         android:textSize="@dimen/_11ssp"
                         android:visibility="visible" />
 
