--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -45,7 +45,7 @@
 
                 <TextView
                     android:id="@+id/readStatusTV"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_15sdp"
                     android:layout_marginRight="@dimen/_15sdp"
