--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -212,7 +212,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="match_parent"
                                         android:layout_gravity="center"
-                                        android:fontFamily="@font/opensans_bold"
+                                        android:fontFamily="@font/opensans_semibold"
                                         android:layout_marginTop="@dimen/_8sdp"
                                         android:layout_marginBottom="@dimen/_8sdp"
                                         android:text="@string/full_amount"
