--- a/app/src/main/res/layout/activity_refund_transaction_success.xml
+++ b/app/src/main/res/layout/activity_refund_transaction_success.xml
@@ -123,11 +123,11 @@
 
             <TextView
                 android:id="@+id/tvRMessage"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/opensans_semibold"
-                android:gravity="center"
+                android:layout_gravity="center"
                 android:text="@string/refund_trans"
                 android:textColor="@color/primary_green"
                 android:textSize="@dimen/_11ssp" />
