--- a/app/src/main/res/layout/buy_token_transaction_failed.xml
+++ b/app/src/main/res/layout/buy_token_transaction_failed.xml
@@ -55,6 +55,7 @@
         app:cardCornerRadius="@dimen/_21sdp">
 
         <TextView
+            android:id="@+id/try_button_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
