--- a/app/src/main/res/layout/activity_reserve_releases.xml
+++ b/app/src/main/res/layout/activity_reserve_releases.xml
@@ -184,7 +184,7 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/rvRollingList"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_2sdp"
                             android:background="@color/white"
                             android:nestedScrollingEnabled="false"
@@ -202,7 +202,7 @@
                             android:text="@string/you_have_no_transactions"
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_10ssp"
-                            android:visibility="gone" />
+                            android:visibility="visible" />
 
                         <ProgressBar
                             android:id="@+id/progressBarLoadMoreTV"
